[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/client",
    "crates/config",
    "crates/ctx",
    "crates/recoil",
    "crates/runner",
    "crates/worker",
    "crates/templ",
    "crates/jobengine",
]

[workspace.package]
version = "0.9.0"
edition = "2024"
license = "MIT"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

