[package]
name = "artifact"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = [ "Nikola Jokic <nikola.jokic@bountyhub.org>" ]
description = "Artifact utility for BountyHub runner"
readme = "README.md"
keywords = ["bountyhub", "runner", "artifact", "zip", "result"]
resolver = "2"

[dependencies]
uuid = { version = "^1", features = ["v4"] }
zip = "^2"
tracing = "^0.1"
ctx = { path = "../ctx" }
error-stack = "^0.5"
