[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = [ "Nikola Jokic <nikola.jokic@bountyhub.org>" ]
description = "CLI app for BountyHub runner"
repository = "https://github.com/bountyhub-org/runner"
readme = "README.md"
keywords = ["bountyhub", "runner", "cli"]
resolver = "2"

[dependencies]
clap = { version = "^4", features = ["derive"] }
clap_complete = "^4"
miette = { version = "^7", features = ["fancy"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"
sudoservice = "0.1.0"
dotenv = "^0.15"
ctrlc = "^3"
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2"] }
config = { path = "../config" }
client = { path = "../client" }
ctx = { path = "../ctx" }
runner = { path = "../runner" }
worker = { path = "../worker" }
