[package]
name = "client"
version = "0.1.0"
edition = "2021"
authors = [ "Nikola Jokic <nikola.jokic@bountyhub.org" ]
description = "Client set for BountyHub runner"
license = "MIT"
readme = "README.md"
keywords = ["bountyhub", "runner", "client"]

[dependencies]
error-stack = "^0.5"
serde = { version = "^1", features = ["derive"] }
tracing = "^0.1"
ureq = { version = "^2", features = ["json", "native-certs"] }
mockall = { version = "0.13.0", optional = true }
serde_repr = "^0.1"
serde_json = "^1"
uuid = { version = "^1", features = ["serde"] }
pipe = "0.4.0"
cel-interpreter = { version = "0.9.0", features = ["chrono", "json"] }
jobengine = { path = "../jobengine" }
ctx = { path = "../ctx" }
recoil = { path = "../recoil" }

[dev-dependencies]
mockall = "0.13.0"
