[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = [ "Nikola Jokic <nikola.jokic@bountyhub.org" ]
description = "Client set for BountyHub runner"
readme = "README.md"
keywords = ["bountyhub", "runner", "client"]
resolver = "2"

[dependencies]
miette = { version = "^7" }
thiserror = "^2"
serde = { version = "^1", features = ["derive"] }
tracing = "^0.1"
reqwest = { version = "^0.12" , default-features = false }
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-retry = "0.7"
reqwest-tracing = "0.5"
tokio-tungstenite = "0.26.0"
tokio = { version = "1", features = ["sync"] }
tokio-util = { version = "0.7" }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures = "0.3"
time = { version = "^0.3", features = ["serde"] }
mockall = { version = "0.13.0", optional = true }
serde_repr = "^0.1"
serde_json = "^1"
uuid = { version = "^1", features = ["serde"] }
cellang = { version = "^0.4" }
jobengine = { path = "../jobengine" }
config = { path = "../config" }

[dev-dependencies]
mockall = "0.13.0"
