[package]
name = "config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = [ "Nikola Jokic <nikola.jokic@bountyhub.org>" ]
description = "Configuration utility for BountyHub runner"
readme = "README.md"
keywords = ["bountyhub", "runner", "config"]
resolver = "2"

[dependencies]
error-stack = "^0.5"
uuid = { version = "^1", features = ["v4"] }
url = "^2"
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1", features = ["std"] }
hostname = "0.4.0"
tracing = "^0.1"
