[package]
name = "ctx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Nikola Jokic <jokicnikola07@gmail.com>"]
description = "Context utility for BountyHub runner"
readme = "README.md"
resolver = "2"
keywords = ["bountyhub", "runner", "context"]

[dependencies]
