[package]
name = "jobengine"
version = "0.1.0"
edition = "2021"
author = ["Nikola Jokic <jokicnikola07@gmail.com>"]
resolver = "2"
description = "Job engine for evaluating BountyHub job expressions"
license = "MIT"
readme = "README.md"
keywords = ["bountyhub", "job", "engine"]

[dependencies]
uuid = { version = "^1"}
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1" }
# cellang = { version = "^0.3" }
cellang = { git = "https://github.com/nikola-jokic/cellang", package="cellang", branch = "main" }
error-stack = "^0.5"
miette = { version = "^7", features = ["fancy"] }

[dev-dependencies]
