[package]
name = "jobengine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Nikola Jokic <jokicnikola07@gmail.com>"]
resolver = "2"
description = "Job engine for evaluating BountyHub job expressions"
readme = "README.md"
keywords = ["bountyhub", "job", "engine"]

[dependencies]
uuid = { version = "^1"}
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1" }
cellang = { version = "^0.4" }
error-stack = "^0.5"
miette = { version = "^7", features = ["fancy"] }

[dev-dependencies]
miette = { version = "^7", features = ["fancy"] }
