[package]
name = "recoil"
version.workspace = true
edition.workspace = true
license.workspace = true
resolver = "2"
description = "Recoil utility for BountyHub runner that provides a retry mechanism"
readme = "README.md"
keywords = ["bountyhub", "runner", "recoil"]
authors = ["Nikola Jokic <nikola.jokic@bountyhub.org>" ]

[dependencies]
rand = "0.8.5"
