[package]
name = "runner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = [ "Nikola Jokic <nikola.jokic@bountyhub.org>" ]
description = "Runner is package used to ask for jobs from the BountyHub platform"
readme = "README.md"
resolver = "2"
keywords = ["bountyhub", "runner", "job"]

[dependencies]
miette = { version = "^7" }
tracing = "^0.1"
uuid = "^1"
client = { path = "../client" }
config = { path = "../config" }
ctx = { path = "../ctx" }
worker = { path = "../worker" }

[dev-dependencies]
mockall = "0.13.0"
client = { path = "../client", features = ["mockall"] }