[package]
name = "streamlog"
version = "0.1.0"
edition = "2021"
authors = ["Nikola Jokic <nikola.jokic@bountyhub.org>" ]
description = "Streamlog utility for BountyHub runner that provides a stream logging mechanism"
license = "MIT"
readme = "README.md"
keywords = ["bountyhub", "runner", "streamlog"]

[dependencies]
pipe = "0.4.0"
uuid = { version = "^1" }
tracing = "^0.1"
time = "^0.3"
client = { path = "../client" }
ctx = { path = "../ctx" }
