[package]
name = "streamlog"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Nikola Jokic <nikola.jokic@bountyhub.org>" ]
description = "Streamlog utility for BountyHub runner that provides a stream logging mechanism"
resolver = "2"
readme = "README.md"
keywords = ["bountyhub", "runner", "streamlog"]

[dependencies]
pipe = "0.4.0"
uuid = { version = "^1" }
tracing = "^0.1"
time = "^0.3"
client = { path = "../client" }
ctx = { path = "../ctx" }
