[package]
name = "templ"
version = "0.1.0"
edition = "2021"
authors = ["Nikola Jokic <nikola.jokic@bountyhub.org>" ]
description = "Templ utility for BountyHub runner that provides a templating mechanism"
license = "MIT"
readme = "README.md"
keywords = ["bountyhub", "runner", "templ"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
