[package]
name = "templ"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Nikola Jokic <nikola.jokic@bountyhub.org>" ]
description = "Templ utility for BountyHub runner that provides a templating mechanism"
resolver = "2"
readme = "README.md"
keywords = ["bountyhub", "runner", "templ"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
