[package]
name = "templ"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Nikola Jokic <nikola.jokic@bountyhub.org>" ]
description = "Templ utility for BountyHub runner that provides a templating mechanism"
resolver = "2"
readme = "README.md"
keywords = ["bountyhub", "runner", "templ"]

[dependencies]
serde = { version = "^1", features = ["derive"] }
miette = { version = "^7" }

[dev-dependencies]
miette = { version = "^7", features = ["fancy"] }
