[package]
name = "worker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = [ "Nikola Jokic <nikola.jokic@bountyhub.org>" ]
resolver = "2"
readme = "README.md"
keywords = ["bountyhub", "runner", "worker"]

[dependencies]
tracing = "^0.1"
error-stack = "^0.5"
cellang = { version = "^0.4" }
uuid = { version = "^1", features = ["v4"] }
shlex = "1.3.0"
time = "^0.3"
client = { path = "../client" }
ctx = { path = "../ctx" }
templ = { path = "../templ" }
artifact = { path = "../artifact" }
streamlog = { path = "../streamlog" }
jobengine = { path = "../jobengine" }

[dev-dependencies]
mockall = "0.13.0"
client = { path = "../client", features = ["mockall"] }
uuid = { version = "^1", features = ["v4", "v7"] }
