[package]
name = "worker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = [ "Nikola Jokic <nikola.jokic@bountyhub.org>" ]
resolver = "2"
readme = "README.md"
keywords = ["bountyhub", "runner", "worker"]

[dependencies]
tracing = "^0.1"
cellang = { version = "^0.4" }
tokio = { version = "1", features = ["sync", "fs", "process"] }
tokio-util = { version = "0.7" }
uuid = { version = "^1", features = ["v4"] }
miette = { version = "^7" }
shlex = "1"
zip = { version = "2" }
time = "^0.3"
client = { path = "../client" }
artifact = { path = "../artifact" }
jobengine = { path = "../jobengine" }

[dev-dependencies]
mockall = "0.13.0"
client = { path = "../client", features = ["mockall"] }
uuid = { version = "^1", features = ["v4", "v7"] }
