[package]
name = "worker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["Nikola Jokic <nikola.jokic@bountyhub.org>"]
resolver = "2"
readme = "README.md"
keywords = ["bountyhub", "runner", "worker"]

[dependencies]
tracing = "^0.1"
cellang = { version = "^0.5" }
uuid = { version = "^1", features = ["v4"] }
miette = { version = "^7" }
shlex = "1.3"
time = "^0.3"
zip = "6"
client = { path = "../client" }
ctx = { path = "../ctx" }
jobengine = { path = "../jobengine" }

[dev-dependencies]
mockall = "0.14"
client = { path = "../client", features = ["mockall"] }
uuid = { version = "^1", features = ["v4", "v7"] }
